[project]
name = "bondtool"
version = "0.1.0"
description = "Bond analytics, portfolio stats, and efficient frontier CLI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Jack Dobson"}]
dependencies = ["pandas", "numpy", "matplotlib"]

[project.scripts]
bondtool = "src.main_cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
